--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -43,6 +43,8 @@ cask "mattermost"
 cask "dropbox"
 cask "slack"
 cask "kindle"
+cask "google-chrome"
+cask "free-download-manager"
 mas "Alfred", id: 405843582
 mas "Keynote", id: 409183694
 mas "LINE", id: 539883307
