--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -54,3 +54,4 @@ mas "Simplenote", id: 692867256
 mas "The Unarchiver", id: 425424353
 mas "Twitterrific", id: 1289378661
 mas "Xcode", id: 497799835
+mas "EdgeViewer 2", id:  1206246482
