--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,16 +49,10 @@ unbind-key '"'   # 横分割
 # window/pane関連
 
 # 区切り線のスタイル
-set  -g pane-active-border-bg    green
-set  -g pane-active-border-fg    red
-setw -g window-status-current-fg blue
 
 set -g window-style 'bg=colour237'
 set -g window-active-style 'bg=colour0'
-set -g pane-border-bg colour234
-set -g pane-border-fg colour67
-set -g pane-active-border-bg colour250
-set -g pane-active-border-fg colour51
+set -g pane-border-style bg=colour234,fg=colour67
 
 bind | split-window -h
 bind - split-window -v
@@ -80,13 +74,10 @@ set -g status-left '#[fg=white,bg=black]#[fg=white][#P#[fg=white]]#[default]'
 set -g status-right '#[fg=white,bg=cyan,bold] Batt:#{battery_icon}#{battery_percentage} [%Y-%m-%d %H:%M] #[default]'
 
 # window-status-current
-setw -g window-status-current-fg white
-setw -g window-status-current-bg cyan
-setw -g window-status-current-attr bold#,underscore
+setw -g window-status-current-style fg=blue,fg=white,bg=cyan,bold#,underscore
 
 # pane-active-border
-set -g pane-active-border-fg black
-set -g pane-active-border-bg cyan
+set -g pane-active-border-style bg=green,fg=red,bg=colour250,fg=colour51,fg=black,bg=cyan
 
 # センタライズ（主にウィンドウ番号など）
 set-option -g status-justify centre
