--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,7 +74,7 @@ set -g status-left '#[fg=white,bg=black]#[fg=white][#P#[fg=white]]#[default]'
 set -g status-right '#[fg=white,bg=cyan,bold] Batt:#{battery_icon}#{battery_percentage} [%Y-%m-%d %H:%M] #[default]'
 
 # window-status-current
-setw -g window-status-current-style fg=blue,fg=white,bg=cyan,bold#,underscore
+setw -g window-status-current-style fg=blue,fg=white,bg=cyan,bold
 
 # pane-active-border
 set -g pane-active-border-style bg=green,fg=red,bg=colour250,fg=colour51,fg=black,bg=cyan
