--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,6 +3,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 tap "homebrew/services"
+tap "homebrew/cask-drivers"
 tap "sanemat/font"
 brew "autoconf"
 brew "automake"
@@ -47,6 +48,7 @@ cask "kindle"
 cask "google-chrome"
 cask "microsoft-office"
 cask "free-download-manager"
+cask "garmin-express"
 mas "Alfred", id: 405843582
 mas "Keynote", id: 409183694
 mas "LINE", id: 539883307
