--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -50,6 +50,7 @@ cask "microsoft-office"
 cask "free-download-manager"
 cask "garmin-express"
 cask "parallels"
+cask "dash"
 mas "Alfred", id: 405843582
 mas "Keynote", id: 409183694
 mas "LINE", id: 539883307
