--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -53,6 +53,7 @@ cask "parallels"
 cask "parallels-toolbox"
 cask "parallels-access"
 cask "dash"
+cask "adguard"
 mas "Alfred", id: 405843582
 mas "Keynote", id: 409183694
 mas "LINE", id: 539883307
