--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -54,6 +54,7 @@ cask "parallels-toolbox"
 cask "parallels-access"
 cask "dash"
 cask "adguard"
+cask "jetbrains-toolbox"
 mas "Alfred", id: 405843582
 mas "Keynote", id: 409183694
 mas "LINE", id: 539883307
