--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -55,6 +55,7 @@ cask "parallels-access"
 cask "dash"
 cask "adguard"
 cask "jetbrains-toolbox"
+cask "qmk-toolbox"
 mas "Keynote", id: 409183694
 mas "LINE", id: 539883307
 mas "Numbers", id: 409203825
