--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -58,6 +58,7 @@ cask "qmk-toolbox"
 cask "vlc"
 cask "bettertouchtool"
 cask "spotify"
+cask "simplenote"
 mas "Keynote", id: 409183694
 mas "LINE", id: 539883307
 mas "Numbers", id: 409203825
