--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -68,3 +68,5 @@ mas "The Unarchiver", id: 425424353
 mas "Twitterrific", id: 1289378661
 mas "Xcode", id: 497799835
 mas "EdgeViewer 2", id:  1206246482
+mas "BetterSnapTool", id:  417375580
+mas "Ulysses", id:  1225570693
