--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -61,6 +61,7 @@ cask "spotify"
 cask "simplenote"
 cask "scrivener"
 cask "adobe-creative-cloud"
+cask "omnioutliner"
 mas "Keynote", id: 409183694
 mas "LINE", id: 539883307
 mas "Numbers", id: 409203825
