--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -62,6 +62,7 @@ cask "simplenote"
 cask "scrivener"
 cask "adobe-creative-cloud"
 cask "omnioutliner"
+cask "omnifocus"
 mas "Keynote", id: 409183694
 mas "LINE", id: 539883307
 mas "Numbers", id: 409203825
